# pomo-i18n

./: .coverage  .gitignore  Makefile  README.ja.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
docs/: api.md  benchmarks.md
src/: test.py
src/pypomo/: __init__.py  catalog.py  gettext.py  mo_writer.py
src/pypomo/mo/: writer.py
src/pypomo/parser/: po_parser.py
src/pypomo/utils/: cache_manager.py  plural_forms.py
tests/: test__build_header.py  test_catalog_basic.py  test_catalog_merge_basic.py  test_catalog_plural.py  test_gettext_api.py  test_gettext_translation.py  test_mo_writer.py  test_plural_forms.py  test_po_parser_basic.py
